[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/third_person_camera.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/player_controller.gd" type="Script" id=2]
[ext_resource path="res://player/tools/cursor_tool.gd" type="Script" id=3]
[ext_resource path="res://player/tools/place_tool.gd" type="Script" id=4]

[node name="PlayerController" type="Node"]
physics_interpolation_mode = 1
script = ExtResource( 2 )

[node name="ThirdPersonCamera" parent="." instance=ExtResource( 1 )]
initial_zoom = 80.0

[node name="CursorTool" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="PlaceTool" type="Spatial" parent="."]
script = ExtResource( 4 )
